// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-pill-container should render as single line 1`] = `
<c-pill-container>
  #shadow-root(open)
    <div
      class="slds-pill_container"
    >
      <ul
        aria-label="Selected Options:"
        aria-orientation="horizontal"
        class="slds-listbox slds-listbox_horizontal slds-listbox_inline"
        role="listbox"
        tabindex="-1"
      >
        <li
          class="slds-listbox-item"
          role="presentation"
        >
          <c-pill
            aria-selected="true"
            role="option"
            tabindex="0"
          >
            #shadow-root(open)
              <span
                class="slds-pill"
              >
                <span
                  class="slds-pill__icon_container"
                >
                  <slot />
                </span>
                <span
                  class="slds-pill__label"
                  title="Avatar Pill"
                >
                  Avatar Pill
                </span>
                <c-button-icon
                  class="slds-pill__remove"
                  tabindex="0"
                >
                  #shadow-root(open)
                    <button
                      class="slds-button slds-button_icon slds-button_icon-bare"
                      title="Remove"
                      type="button"
                    >
                      <c-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-button__icon"
                            data-key="close"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                            />
                          </svg>
                      </c-primitive-icon>
                      <span
                        class="slds-assistive-text"
                      >
                        Press delete or backspace to remove
                      </span>
                    </button>
                </c-button-icon>
              </span>
            <c-avatar
              class="slds-avatar slds-avatar_circle slds-avatar_x-small slds-icon_container"
            >
              #shadow-root(open)
                <img
                  alt="User avatar"
                  src="/assets/images/avatar2.jpg"
                  title="User avatar"
                />
            </c-avatar>
          </c-pill>
        </li>
        <li
          class="slds-listbox-item"
          role="presentation"
        >
          <c-pill
            aria-selected="true"
            role="option"
            tabindex="-1"
          >
            #shadow-root(open)
              <span
                class="slds-pill"
              >
                <span
                  class="slds-pill__icon_container"
                >
                  <slot />
                </span>
                <span
                  class="slds-pill__label"
                  title="Icon Pill"
                >
                  Icon Pill
                </span>
                <c-button-icon
                  class="slds-pill__remove"
                  tabindex="-1"
                >
                  #shadow-root(open)
                    <button
                      class="slds-button slds-button_icon slds-button_icon-bare"
                      title="Remove"
                      type="button"
                    >
                      <c-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-button__icon"
                            data-key="close"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                            />
                          </svg>
                      </c-primitive-icon>
                      <span
                        class="slds-assistive-text"
                      >
                        Press delete or backspace to remove
                      </span>
                    </button>
                </c-button-icon>
              </span>
            <c-icon
              class="slds-icon-standard-account slds-icon_container"
            >
              #shadow-root(open)
                <c-primitive-icon>
                  #shadow-root(open)
                    <svg
                      aria-hidden="true"
                      class="slds-icon"
                      data-key="account"
                      focusable="false"
                    >
                      <use
                        xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                      />
                    </svg>
                </c-primitive-icon>
                <span
                  class="slds-assistive-text"
                >
                  Account
                </span>
            </c-icon>
          </c-pill>
        </li>
        <li
          class="slds-listbox-item"
          role="presentation"
        >
          <c-pill
            aria-selected="true"
            role="option"
            tabindex="-1"
          >
            #shadow-root(open)
              <span
                class="slds-pill"
              >
                <span
                  class="slds-pill__icon_container"
                >
                  <slot />
                </span>
                <span
                  class="slds-pill__label"
                  title="Icon Pill Default"
                >
                  Icon Pill Default
                </span>
                <c-button-icon
                  class="slds-pill__remove"
                  tabindex="-1"
                >
                  #shadow-root(open)
                    <button
                      class="slds-button slds-button_icon slds-button_icon-bare"
                      title="Remove"
                      type="button"
                    >
                      <c-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-button__icon"
                            data-key="close"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                            />
                          </svg>
                      </c-primitive-icon>
                      <span
                        class="slds-assistive-text"
                      >
                        Press delete or backspace to remove
                      </span>
                    </button>
                </c-button-icon>
              </span>
          </c-pill>
        </li>
      </ul>
    </div>
</c-pill-container>
`;

exports[`c-pill-container should render bare variant 1`] = `
<c-pill-container>
  #shadow-root(open)
    <div
      class="slds-pill_container"
    >
      <c-pill
        class="slds-truncate"
      >
        #shadow-root(open)
          <span
            class="slds-pill"
          >
            <span
              class="slds-pill__icon_container"
            >
              <slot />
            </span>
            <span
              class="slds-pill__label"
              title="Avatar Pill"
            >
              Avatar Pill
            </span>
            <c-button-icon
              class="slds-pill__remove"
              tabindex="0"
            >
              #shadow-root(open)
                <button
                  class="slds-button slds-button_icon slds-button_icon-bare"
                  title="Remove"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon"
                        data-key="close"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Press delete or backspace to remove
                  </span>
                </button>
            </c-button-icon>
          </span>
        <c-avatar
          class="slds-avatar slds-avatar_circle slds-avatar_x-small slds-icon_container"
        >
          #shadow-root(open)
            <img
              alt="User avatar"
              src="/assets/images/avatar2.jpg"
              title="User avatar"
            />
        </c-avatar>
      </c-pill>
      <c-pill
        class="slds-truncate"
      >
        #shadow-root(open)
          <span
            class="slds-pill"
          >
            <span
              class="slds-pill__icon_container"
            >
              <slot />
            </span>
            <span
              class="slds-pill__label"
              title="Icon Pill"
            >
              Icon Pill
            </span>
            <c-button-icon
              class="slds-pill__remove"
              tabindex="0"
            >
              #shadow-root(open)
                <button
                  class="slds-button slds-button_icon slds-button_icon-bare"
                  title="Remove"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon"
                        data-key="close"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Press delete or backspace to remove
                  </span>
                </button>
            </c-button-icon>
          </span>
        <c-icon
          class="slds-icon-standard-account slds-icon_container"
        >
          #shadow-root(open)
            <c-primitive-icon>
              #shadow-root(open)
                <svg
                  aria-hidden="true"
                  class="slds-icon"
                  data-key="account"
                  focusable="false"
                >
                  <use
                    xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                  />
                </svg>
            </c-primitive-icon>
            <span
              class="slds-assistive-text"
            >
              Account
            </span>
        </c-icon>
      </c-pill>
      <c-pill
        class="slds-truncate"
      >
        #shadow-root(open)
          <span
            class="slds-pill"
          >
            <span
              class="slds-pill__icon_container"
            >
              <slot />
            </span>
            <span
              class="slds-pill__label"
              title="Icon Pill Default"
            >
              Icon Pill Default
            </span>
            <c-button-icon
              class="slds-pill__remove"
              tabindex="0"
            >
              #shadow-root(open)
                <button
                  class="slds-button slds-button_icon slds-button_icon-bare"
                  title="Remove"
                  type="button"
                >
                  <c-primitive-icon>
                    #shadow-root(open)
                      <svg
                        aria-hidden="true"
                        class="slds-button__icon"
                        data-key="close"
                        focusable="false"
                      >
                        <use
                          xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                        />
                      </svg>
                  </c-primitive-icon>
                  <span
                    class="slds-assistive-text"
                  >
                    Press delete or backspace to remove
                  </span>
                </button>
            </c-button-icon>
          </span>
      </c-pill>
    </div>
</c-pill-container>
`;

exports[`c-pill-container should render when no items 1`] = `
<c-pill-container>
  #shadow-root(open)
    <div
      class="slds-pill_container"
    >
      <ul
        aria-label="Selected Options:"
        aria-orientation="horizontal"
        class="slds-listbox slds-listbox_horizontal"
        role="listbox"
        tabindex="0"
      />
    </div>
</c-pill-container>
`;

exports[`c-pill-container should render with items 1`] = `
<c-pill-container>
  #shadow-root(open)
    <div
      class="slds-pill_container"
    >
      <ul
        aria-label="Selected Options:"
        aria-orientation="horizontal"
        class="slds-listbox slds-listbox_horizontal"
        role="listbox"
        tabindex="-1"
      >
        <li
          class="slds-listbox-item"
          role="presentation"
        >
          <c-pill
            aria-selected="true"
            role="option"
            tabindex="0"
          >
            #shadow-root(open)
              <span
                class="slds-pill"
              >
                <span
                  class="slds-pill__icon_container"
                >
                  <slot />
                </span>
                <span
                  class="slds-pill__label"
                  title="Avatar Pill"
                >
                  Avatar Pill
                </span>
                <c-button-icon
                  class="slds-pill__remove"
                  tabindex="0"
                >
                  #shadow-root(open)
                    <button
                      class="slds-button slds-button_icon slds-button_icon-bare"
                      title="Remove"
                      type="button"
                    >
                      <c-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-button__icon"
                            data-key="close"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                            />
                          </svg>
                      </c-primitive-icon>
                      <span
                        class="slds-assistive-text"
                      >
                        Press delete or backspace to remove
                      </span>
                    </button>
                </c-button-icon>
              </span>
            <c-avatar
              class="slds-avatar slds-avatar_circle slds-avatar_x-small slds-icon_container"
            >
              #shadow-root(open)
                <img
                  alt="User avatar"
                  src="/assets/images/avatar2.jpg"
                  title="User avatar"
                />
            </c-avatar>
          </c-pill>
        </li>
        <li
          class="slds-listbox-item"
          role="presentation"
        >
          <c-pill
            aria-selected="true"
            role="option"
            tabindex="-1"
          >
            #shadow-root(open)
              <span
                class="slds-pill"
              >
                <span
                  class="slds-pill__icon_container"
                >
                  <slot />
                </span>
                <span
                  class="slds-pill__label"
                  title="Icon Pill"
                >
                  Icon Pill
                </span>
                <c-button-icon
                  class="slds-pill__remove"
                  tabindex="-1"
                >
                  #shadow-root(open)
                    <button
                      class="slds-button slds-button_icon slds-button_icon-bare"
                      title="Remove"
                      type="button"
                    >
                      <c-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-button__icon"
                            data-key="close"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                            />
                          </svg>
                      </c-primitive-icon>
                      <span
                        class="slds-assistive-text"
                      >
                        Press delete or backspace to remove
                      </span>
                    </button>
                </c-button-icon>
              </span>
            <c-icon
              class="slds-icon-standard-account slds-icon_container"
            >
              #shadow-root(open)
                <c-primitive-icon>
                  #shadow-root(open)
                    <svg
                      aria-hidden="true"
                      class="slds-icon"
                      data-key="account"
                      focusable="false"
                    >
                      <use
                        xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                      />
                    </svg>
                </c-primitive-icon>
                <span
                  class="slds-assistive-text"
                >
                  Account
                </span>
            </c-icon>
          </c-pill>
        </li>
        <li
          class="slds-listbox-item"
          role="presentation"
        >
          <c-pill
            aria-selected="true"
            role="option"
            tabindex="-1"
          >
            #shadow-root(open)
              <span
                class="slds-pill"
              >
                <span
                  class="slds-pill__icon_container"
                >
                  <slot />
                </span>
                <span
                  class="slds-pill__label"
                  title="Icon Pill Default"
                >
                  Icon Pill Default
                </span>
                <c-button-icon
                  class="slds-pill__remove"
                  tabindex="-1"
                >
                  #shadow-root(open)
                    <button
                      class="slds-button slds-button_icon slds-button_icon-bare"
                      title="Remove"
                      type="button"
                    >
                      <c-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-button__icon"
                            data-key="close"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                            />
                          </svg>
                      </c-primitive-icon>
                      <span
                        class="slds-assistive-text"
                      >
                        Press delete or backspace to remove
                      </span>
                    </button>
                </c-button-icon>
              </span>
          </c-pill>
        </li>
      </ul>
    </div>
</c-pill-container>
`;
